apps/prod/poulet/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poulet
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    istio-injection: enabled
